compiler/tests/success/x86-64/test_glob_array_while2.jazz
u64[4] glob_t = { 0, 1, 2, 3 };

export fn sum (reg u64 x) -> reg u64 {
  reg u64 r;
  inline int i1;
  reg u64 i;
  reg ptr u64[4] gt1;

  r = 0; 
  i = 0;
  gt1 = glob_t;
  while (i < 4) {
    r += gt1[(int)i];
    i += 1;
  }
  return r;
}

