compiler/tests/fail/asmgen/x86-64/invalid_scale.jazz
export fn f (reg ptr u64[2] r, reg u64 i) -> reg u64 {
  reg u64 res = r[3*i+2];
  return res;
}
